Introduce security scheme
