# routes/table.go
@@ -1,9 +1,24 @@
 package routes
 
-import "net/http"
+import (
+	"github.com/gorilla/sessions"
+	swagger "github.com/swaggest/swgui/v5emb"
+	"net/http"
+)
 
-func Register(mux *http.ServeMux) {
-	mux.HandleFunc("/api/openapi.yml", Docs)
-	mux.HandleFunc("/assets/", Assets)
-	mux.HandleFunc("/", Index)
+func RegisterApi(mux *http.ServeMux, apiHandler http.Handler) {
+	mux.Handle("/api/docs/", swagger.New("OpenAPI Docs", "/api/openapi.yml", "/api/docs/"))
+	mux.Handle("/api/", apiHandler)
+	mux.HandleFunc("/api/openapi.yml", apiDocs)
+}
+
+func RegisterApp(mux *http.ServeMux) {
+	mux.HandleFunc("/assets/", assets)
+	mux.HandleFunc("/", index)
+}
+
+func RegisterAuth(mux *http.ServeMux, store *sessions.CookieStore) {
+	mux.HandleFunc("/auth/login", func(w http.ResponseWriter, r *http.Request) {
+
+	})
 }
